agregue grids a mi proyecto

--- a/css/style.css
+++ b/css/style.css
@@ -3,33 +3,31 @@
   padding: 0;
 }
 html {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: #282938;
   background-color: #c9c9c9;
 }
-.main__header {
-  background-image: url(../img/Bannercinemasf.png);
-  padding: 20px;
-  background-color: #c9c9c9;
-  width: 100%;
-  display: inline-block;
-}
+
 a {
   text-decoration: none;
   color: whitesmoke;
   font-size: 120%;
-  text-align: justify;
   font-weight: 50;
 }
 .main__header__nav {
-  background-color: #c9c9c9; 
-  word-spacing: 15px;
-  text-align: end;
+  background-color: #000000;
+  text-align: right;
   position: fixed;
-  display: inline-block;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  word-spacing: 13px;
   width: 100%;
-  margin-left: -20px;
-  margin-top: -20px;
+  margin-left: 0px;
+  margin-top: -78px;
+  padding-bottom: 0px;
+  padding-top: 0px;
   background-image: url(../img/Bannercinemasf.png);
   background-position: left;
   background-repeat: no-repeat;
@@ -39,64 +37,92 @@ a {
 
 .main__header__ul {
   text-align: end;
-  margin: 30px;
-  padding: 17px; 
+  margin: 5px;
+  padding: 17px;
 }
-.main__header__ul li{
+.main__header__ul li {
   display: inline-block;
   padding: 5px;
   border: 2px solid #c9c9c9;
   border-radius: 50px;
 }
 
-.estrenos_maintitle{
+.titulo__estrenos {
   background-color: rgb(104, 17, 0);
   color: #c9c9c9;
   background-image: url(../img/Logoh1.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: start;
-  margin-top: 88px;
-  margin-bottom: 0px;
-  padding: 50px;
+  margin-top: 78px;
+  margin-bottom: 40px;
+  padding-top: 38px;
+  padding-bottom: 50px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
   position: static;
   text-align: center;
   display: block;
   font-size: 30px;
-  }
+  height: 60px;
+  position: static;
+}
+
+.section__estrenos {
+  background-color: #c9c9c9;
+  display: grid;
+  grid-template-areas: 
+  "peli01 peli02";
+  grid-template-rows: 658px;
+  grid-template-columns: 600px 650px;
+  gap: 40px;
+  padding: 30px;
+}
+
+.div__nope {
+  grid-area: peli01;
+}
+
+.div__spiderman {
+  grid-area: peli02;
+}
 
 h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.text__nope{
+.text__nope {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: justify;
   font-size: large;
 }
-.text__spiderman{
+.text__spiderman {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: justify;
   font-size: large;
 }
-.nosotros__main{
+/* inicio nosotros */
+.nosotros__main {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: justify;
   font-size: 28px;
   background-color: #c9c9c9;
 }
+/* fin nosotros */
 .texto__servicios {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: justify;
   font-size: large;
   background-color: #c9c9c9;
 }
-.footer__main{
+.main__footer {
   background-color: #080303;
   padding: 0px;
   margin: 0px;
   margin-bottom: -85px;
 }
-.footer__img{
+.img__footer {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #080303;
   color: #c9c9c9;
@@ -109,7 +135,7 @@ h2 {
   top: -84px;
   left: 83px;
 }
-.footer__img img{
+.img__footer img {
   padding: 55px;
   margin: -167px;
   border: 0px solid black;
@@ -120,19 +146,15 @@ h2 {
   left: -64px;
   background-color: #080303;
 }
-.div__principal {
-  background-color: #c9c9c9;
-  text-align: justify;
-  text-align: start;
-}
-
 
 h2 {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 320%;
+  font-size: 320%;
 }
-.contacto__form{
+/* arranca contactos */
+.contacto__form {
   background-color: #c9c9c9;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+/* termina contactos */
