--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,20 @@ a {
   font-size: 120%;
   font-weight: 50;
 }
-.body__grid {
+.main__grid {
+  background-color: #c9c9c9;
   display: grid;
   grid-template-areas: 
   "logoynav logoynav"
-  "carrousel carrousel"
+  "carousel carousel"
   "tituloestrenos publicidad"
   "peli01 servicios"
   "peli02 servicios";
-  grid-template-rows: 658px 600px 600px 600px 600px;
+  grid-template-rows: 214px 226px 179px 357px 276px;
   grid-template-columns: 1103px 902px;
   gap: 40px;
-  padding: 30px;
+  /* padding: 30px; */
+  justify-items: center;
 }
 .main__header__nav {
   background-color: #000000;
@@ -37,10 +39,11 @@ a {
   justify-content: flex-start;
   word-spacing: 13px;
   width: 100%;
-  margin-left: -30px;
-  margin-top: -30px;
-  padding-bottom: 0px;
-  padding-top: 0px;
+  height: 110px;
+  /* margin-left: 0px; */
+  /* margin-top: -30px; */
+  /* padding-bottom: 0px; */
+  /* padding-top: 40px; */
   background-image: url(../img/Bannercinemasf.png);
   background-position: left;
   background-repeat: no-repeat;
@@ -72,7 +75,7 @@ a {
   text-align: center;
   display: block;
   font-size: 30px;
-  height: 133px;
+  height: 100px;
   position: static;
   grid-area: tituloestrenos;
 }
@@ -96,24 +99,25 @@ a {
 .section__estrenos {
   background-color: #c9c9c9;
   margin-top: 34px;
-  margin-bottom: -10px;
-  padding-top: 38px;
+  /* margin-bottom: -10px; */
+  padding-top: 82px;
   padding-bottom: 50px;
   margin-left: 0px;
-  margin-right: -73px;
+  /* margin-right: -73px; */
   padding-left: 0px;
   padding-right: 0px;
+  position: static;
 }
 
 .section__publiservicios {
-  margin-top: 74px;
-  margin-bottom: -10px;
-  padding-top: 38px;
+  margin-top: 32px;
+  /* margin-bottom: -10px; */
+  padding-top: 107px;
   padding-bottom: 50px;
-  margin-left: 0px;
-  margin-right: -73px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 80px;
+  /* margin-right: -10px; */
+  padding-left: 12px;
+  padding-right: 7px;
 }
 
 h2 {
@@ -145,9 +149,10 @@ h2 {
 }
 .main__footer {
   background-color: #080303;
-  padding: 0px;
-  margin: 0px;
+  /* padding-top: 0px; */
+  /* margin-top: 0px; */
   margin-bottom: -85px;
+  /* padding-bottom: 0px; */
 }
 .img__footer {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -155,11 +160,11 @@ h2 {
   color: #c9c9c9;
   font-size: x-large;
   text-align: right;
-  padding: 122px;
+  padding: 141px;
   margin: 84px;
-  border: 0px;
+  /* border: 0px; */
   position: relative;
-  top: -84px;
+  /* top: -84px; */
   left: 83px;
 }
 .img__footer img {
